compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__correct_pipe_arity_error_location.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn x(x, y) { x }\nfn main() { 1 |> x() }"
---
----- SOURCE CODE
fn x(x, y) { x }
fn main() { 1 |> x() }

----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:2:18
  │
2 │ fn main() { 1 |> x() }
  │                  ^^^ Expected 2 arguments, got 1
